# earthquake-twitter-bot

./: .gitignore  Cargo.toml  LICENSE  Readme.md
config/: config.yml.sample
src/: date.rs  main.rs  scraping.rs  tweeting.rs  util.rs
