[package]
name = "earthquake-twitter-bot"
version = "0.1.0"
authors = ["cygnusbeta <betacygnib+git@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 3
debug = true
debug-assertions = false
overflow-checks = true
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[dependencies]
egg-mode = { version = "0.15", features = ["rustls"], default-features = false }
