[package]
name = "earthquake-twitter-bot"
version = "0.1.0"
authors = ["cygnusbeta <betacygnib+git@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[profile.dev]
#opt-level = 3
#debug = true
#debug-assertions = false
#overflow-checks = true
#lto = false
#panic = 'unwind'
#incremental = false
#codegen-units = 16
#rpath = false

[dependencies]
egg-mode = { version = "0.15", features = ["rustls"], default-features = false }
serde_yaml = "0.8.16"
tokio = "0.2.25"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "blocking"] }
scraper = "0.12.0"
job_scheduler = "1.2.1"
chrono = "0.4.19"

[[bin]]
name = "scraping"
path = "src/scraping.rs"

[[bin]]
name = "tweeting"
path = "src/tweeting.rs"

[[bin]]
name = "date"
path = "src/date.rs"
