[package]
name = "earthquake-twitter-bot"
version = "0.1.0"
authors = ["cygnusbeta <betacygnib+git@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0
debug = true
debug-assertions = false
overflow-checks = true
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[dependencies]
serde_yaml = "0.8.16"
tokio = "1.28.1"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "blocking"] }
scraper = "0.12.0"
job_scheduler = "1.2.1"
chrono = "0.4.19"
twitter-v2 = "0.1.8"

[[bin]]
name = "scraping"
path = "src/scraping.rs"

[[bin]]
name = "tweeting"
path = "src/tweeting.rs"

[[bin]]
name = "date"
path = "src/date.rs"
